# delaunayMinimal

./: .gitignore  CMakeLists.txt  README.md
data/: 333.ele  333.ele.ps  333.node  4.ele  4.ele.ps  633.ele  633.ele.ps  box.ele  box.ele.ps  dots.ele  dots.ele.ps  dots2.ele  dots2.ele.ps  dots2.node  flag.ele  flag.ele.ps  grid.ele  grid.ele.ps  grid.node  ladder.ele  ladder.ele.ps  spiral.ele  spiral.ele.ps  tri.ele  tri.ele.ps  ttimeu10000.ele  ttimeu10000.ele.ps
lib/: CMakeLists.txt
lib/Eigen/: AlignedVector
src/: CMakeLists.txt
src/qedge/: CMakeLists.txt  Data.cpp  Data.h  DelaunaySubdivision.cpp  DelaunaySubdivision.h  Edge.cpp  Edge.h  QuadEdge.cpp  QuadEdge.h  io_utils.cpp  io_utils.h
src/test/: CMakeLists.txt  delaunayApp.cpp
src/utils/: CMakeLists.txt  geom_predicates.cpp  geom_predicates.h  misc.cpp  misc.h  predicates.c  sorting.cpp  sorting.h
